# PropheXi

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  fix_mem.sh  prophexi.cpp  recorder.cpp
config/: default.yaml
src/: CMakeLists.txt  device.cpp  prophesee.cpp  prophexi.cpp  ui.cpp  ximea.cpp
src/inc/: device.hpp  prophesee.hpp  ui.hpp  ximea.hpp
